syntax = "proto3";

package chain;

option go_package = "github.com/web3eye-io/Web3Eye/proto/web3eye/basetype/v1";

enum ChainType{
    ChainUnkonwn = 0;
    Ethereum = 10;
    Solana = 20;
}

enum TokenType{
    TokenUnkonwn = 0;
    ERC721 = 10;
    ERC1155 = 20;
    Metaplex = 30;
    NoURI = 40;
}


enum UrlType{
    UrlTypeUnkonwn = 0;
    ImageUrl = 10;
    VedieoUrl = 20;
}
